--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,5 +25,18 @@ jobs:
             -Dsonar.organization=girish-potnuru
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
+      - name: Install Dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run pip-audit
+        run: pip install pip-audit && pip-audit
+
+      - name: Run Safety Scan
+        run: |
+          pip install safety
+          safety check --full-report
       - name: Security Placeholder
         run: echo "🔐 Security Scan will be added here later"
