--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run pip-audit
-        run: pip install pip-audit && pip-audit
+        run: |
+          python3 -m pip install --user pip-audit
+          python3 -m pip_audit --desc
 
       - name: Run Safety Scan
         run: |
