--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Run pip-audit
         run: |
-          python3 -m pip install --user pip-audit
-          python3 -m pip_audit --desc
+          pip install pip-audit
+          pip-audit -r requirements.txt --desc
 
       - name: Run Safety Scan
         run: |
