--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,10 +31,15 @@ jobs:
           python3 -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run pip-audit
+      - name: Run pip-audit (isolated venv)
         run: |
+          python3 -m pip install --upgrade pip
+          python3 -m venv .venv-pip-audit
+          source .venv-pip-audit/bin/activate
+          pip install --upgrade pip
           pip install pip-audit
           pip-audit -r requirements.txt --desc
+          deactivate
 
       - name: Run Safety Scan
         run: |
